# canvas-downloader

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  download_files.py  main.py  pyproject.toml  requirements.txt  temp.py
.claude/tasks/: 2025-09-25_course-fetching-progress-bar.md  2025-09-25_fix-panel-height-scrolling.md  2025-09-25_fix-stop-button-error-state.md  2025-09-25_immediate-connection-status-update.md  2025-09-25_loading-state-for-course-fetching.md  2025-09-25_persist-configuration.md  2025-09-25_rate-limiting.md  2025-09-25_secure-api-key-storage.md  2025-09-26_environment-configuration.md  2025-09-26_frontend-environment-config.md  2025-09-26_robust-logging-refactor.md
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: CanvasDownloader.jsx  ConfigurationPanel.jsx  CourseSelector.jsx  Header.jsx  LogPanel.jsx
frontend/src/utils/: crypto.js  environment.js  logger.js
server/: app.py
